--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -1,4 +1,6 @@
 #page-room {
+  width: 100vw;
+
   header {
     padding: 24px;
     border-bottom: 1px solid #e2e2e2;
@@ -12,6 +14,10 @@
 
       > img {
         max-height: 45px;
+
+        @media (max-width: 480px) {
+          max-height: 35px;
+        }
       }
 
       > div {
@@ -20,6 +26,10 @@
 
         button {
           height: 40px;
+
+          @media (max-width: 768px) {
+            font-size: 14px;
+          }
         }
       }
     }
@@ -107,6 +117,10 @@
 
     .question-list {
       margin-top: 32px;
+    }
+
+    @media (max-width: 768px) {
+      padding: 0 10px;
     }
   }
 }
