--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: stretch;
   height: 100vh;
+  width: 100vw;
 
   aside {
     flex: 7;
@@ -14,6 +15,10 @@
     justify-content: center;
 
     padding: 120px 80px;
+
+    @media (max-width: 760px) {
+      display: none;
+    }
 
     img {
       max-width: 320px;
