--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -117,6 +117,26 @@
 
     .question-list {
       margin-top: 32px;
+
+      .no-messages {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 60px;
+
+        h2 {
+          font-family: 'Poppins', sans-serif;
+          margin-top: 10px;
+        }
+
+        p {
+          margin-top: 8px;
+          color: #737380;
+          line-height: 21px;
+          text-align: center;
+        }
+      }
     }
 
     @media (max-width: 768px) {
